# xin

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  test.yml  update.yml
examples/: parse.rs
shells/xin/: default.nix
src/: lib.rs  main.rs  search.rs
src/parser/: error.rs  mod.rs
