[package]
name = "xin"
version = "0.1.0"
edition = "2021"
default-run = "xin"

[[bin]]
name = "xin"
path = "src/main.rs"


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
libxinux = "1.0.1"
owo-colors = { version = "4", features = ["supports-colors"] }
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
